# transmission-remote-gnome

./: .editorconfig  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_post_install.py  se.tingping.Trg.json  setup.cfg
data/: io.github.Trg.gschema.xml  meson.build  se.tingping.Trg.appdata.xml.in  se.tingping.Trg.desktop.in  se.tingping.Trg.desktop.in.in  se.tingping.Trg.gresource.xml  se.tingping.Trg.gschema.xml  se.tingping.Trg.service.desktop  se.tingping.Trg.service.in  trg.gresource.xml
data/gtk/: help-overlay.ui  menus.ui
data/ui/: adddialog.ui  adduridialog.ui  applicationwindow.ui  fileview.ui  movedialog.ui  no-torrents.ui  preferencesdialog.ui  properties.ui  torrentview.ui
debian/: control  copyright
po/: Makevars  POTFILES  POTFILES.in
scripts/: build_flatpak.py  meson_post_install.py
trg/: __main__.py.in  add_dialog.py  application.py  bencode.py  cell_renderers.py  client.py  list_model_override.py  list_wrapper.py  preferences_dialog.py  timer.py  torrent.py  torrent_file.py  torrent_file_view.py  torrent_list_view.py  torrent_properties.py  tracker.py  utils.py  window.py
